tests/extensions/include/errors/variables-inactive.sieve
require "include";
require "fileinto";

import "friep";
export "frop";

fileinto "Frop";
